# OPC_UA_Client-Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AsmproExtraTarget.cmake  AsmproGenConfig.cmake  AsmproModule.cmake  FindMVSDK.cmake  FindOPTCam.cmake  FindOPTCtrl.cmake
cmake/templates/: AsmproConfig.cmake.in
modules/: CMakeLists.txt
modules/opcua_cs/: CMakeLists.txt
modules/opcua_cs/include/asmpro/: opcua_cs.hpp
modules/opcua_cs/include/asmpro/opcua_cs/: argument.hpp  client.hpp  convert.h  object.hpp  server.hpp  ua_utility.hpp  variable.hpp
modules/opcua_cs/src/: argument.cpp  client.cpp  convert.cpp  server.cpp  variable.cpp
src/: delaycal_client.cpp  delaycal_server.cpp  ua_client.cpp  ua_server.cpp
